# skit-pipelines

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.cuda_p38  LICENSE  Makefile  README.md  README.rst  build_dev_image  consumer.py  docker-compose.yml  docker_build_dev_image  docker_build_dev_image.dvc  env.sh.dvc  fetch-calls-pipeline.py  fetch-calls-pipeline.yaml  pipeline_secrets.dvc  pyproject.toml  run_pipeline.py  secrets.dvc  sql.dvc  test_consumer.py  us_docker_build_dev_image.dvc
.dvc/: config
config/: config.yaml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  skit_pipelines.api.html  skit_pipelines.api.models.html  skit_pipelines.components.evaluate_slu_from_repo.html  skit_pipelines.components.fetch_gpt_intent_prediction.html  skit_pipelines.components.fetch_tagged_data_label_store.html  skit_pipelines.components.final_conversation_generator.html  skit_pipelines.components.html  skit_pipelines.components.identify_compliance_breaches_llm.html  skit_pipelines.components.invalidate_situations_in_db.html  skit_pipelines.components.modify_entities.html  skit_pipelines.components.preprocess.create_features.html  skit_pipelines.components.preprocess.create_true_intent_column.html  skit_pipelines.components.preprocess.create_true_transcript_column.html  skit_pipelines.components.preprocess.create_utterance_column.html  skit_pipelines.components.preprocess.extract_true_transcript_labels_to_txt.html  skit_pipelines.components.preprocess.html  skit_pipelines.components.preprocess.process_true_transcript_column.html  skit_pipelines.components.retrain_slu_from_repo.html  skit_pipelines.components.sample_conversations_generator.html  skit_pipelines.components.tag_calls.html  skit_pipelines.components.upload2sheet.html  skit_pipelines.components.upload_conv_to_labelstudio.html  skit_pipelines.components.upload_conversation_data_to_metrics_db.html  skit_pipelines.components.upload_for_call_and_slot_tagging.html  skit_pipelines.components.validate_and_add_situations_to_db.html  skit_pipelines.html  skit_pipelines.pipelines.asr_tune.html  skit_pipelines.pipelines.eer_from_tog.html  skit_pipelines.pipelines.eval_asr_pipeline.html  skit_pipelines.pipelines.eval_voicebot_xlmr_pipeline.html  skit_pipelines.pipelines.evaluate_slu.html  skit_pipelines.pipelines.fetch_calls_n_push_to_sheets.html  (+22 more)
skit_pipelines/: constants.py
source/: conf.py  index.rst  modules.rst  skit_pipelines.api.models.rst  skit_pipelines.components.evaluate_slu_from_repo.rst  skit_pipelines.components.fetch_tagged_data_label_store.rst  skit_pipelines.components.final_conversation_generator.rst  skit_pipelines.components.invalidate_situations_in_db.rst  skit_pipelines.components.modify_entities.rst  skit_pipelines.components.preprocess.create_features.rst  skit_pipelines.components.preprocess.create_true_transcript_column.rst  skit_pipelines.components.preprocess.extract_true_transcript_labels_to_txt.rst  skit_pipelines.components.preprocess.rst  skit_pipelines.components.rst  skit_pipelines.components.sample_conversations_generator.rst  skit_pipelines.components.tag_calls.rst  skit_pipelines.components.upload2sheet.rst  skit_pipelines.pipelines.rst  (+13 more)
(+382 files in other folders)
