[tool.poetry]
name = "skit-pipelines"
version = "0.1.21"
description = "Kubeflow components for ml workflows at skit.ai."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "0.5.3"
slack-sdk = "^3.15.2"
requests = "^2.27.1"
boto3 = "^1.20.24"
skit-auth = "^0.1.3"
skit-calls = "0.2.7"
skit-labels = "0.3.17"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
skit-auth = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
