[tool.poetry]
name = "skit-pipelines"
version = "0.1.39"
description = "Kubeflow components for ml workflows at skit.ai."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "0.5.3"
slack-sdk = "^3.15.2"
requests = "^2.27.1"
boto3 = "^1.20.24"
skit-auth = "^0.1.3"
skit-calls = "0.2.12"
skit-labels = "0.3.21"
torch = "^1.11.0"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
selenium = "^4.1.3"
webdriver-manager = "^3.5.4"
aiokafka = "^0.7.2"
dvc = {extras = ["s3"], version = "^2.10.1"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
skit-auth = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
