[tool.poetry]
name = "skit-pipelines"
version = "1.0.6"
description = "Kubeflow components for ml workflows at skit.ai."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
loguru = "0.5.3"
slack-sdk = "3.15.2"
requests = "2.27.1"
boto3 = "1.20.24"
skit-labels = "0.3.34"
fastapi = "0.75.1"
uvicorn = {extras = ["standard"], version = "0.17.6"}
selenium = "4.1.3"
webdriver-manager = "3.5.4"
dvc = {extras = ["s3"], version = "2.9.5"}
gspread = "5.4.0"
oauth2client = "4.1.3"
tabulate = "0.8.9"
slack-bolt = "1.14.0"
kfp = "1.8.22"
pandas = "1.4.2"
skit-auth = "0.1.5"
jsoncomment = "^0.4.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
GitPython = "^3.1.27"
google-auth-oauthlib = "0.4.6"
skit-calls = "0.2.48"
SQLAlchemy = "1.4.42"
openai = "^0.27.2"
polars = "^0.17.15"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"
spacy = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
Sphinx = "4.4.0"
sphinx-copybutton = "0.3.1"
sphinx-autodoc-typehints = "1.16.0"
furo = "^2022.4.7"
taskipy = "^1.10.2"
docopt = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]


[tool.taskipy.tasks]
serve = "uvicorn skit_pipelines.api.endpoints:app --proxy-headers --host 0.0.0.0 --port 9991 --workers 1 --reload"
run_pipeline = "source secrets/env.sh && python run_pipeline.py"
run_pipeline_us = "source pipeline_secrets/us_env.sh && python run_pipeline.py"
